# Grit

crates/auth/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli_bin/: Cargo.toml
crates/core/: Cargo.toml
crates/grit-pattern-matcher/: Cargo.toml
crates/grit-util/: Cargo.toml
crates/gritcache/: Cargo.toml
crates/gritmodule/: Cargo.toml
crates/language/: Cargo.toml
crates/lsp/: Cargo.toml
crates/marzano_messenger/: Cargo.toml
crates/test_utils/: Cargo.toml
crates/util/: Cargo.toml
crates/wasm-bindings/: Cargo.toml  package.json
resources/language-metavariables/tree-sitter-c-sharp/: Cargo.toml  package.json
resources/language-metavariables/tree-sitter-css/: Cargo.toml  package.json
resources/language-metavariables/tree-sitter-go/: Cargo.toml  package.json
resources/language-metavariables/tree-sitter-hcl/: Cargo.toml  package.json
resources/language-metavariables/tree-sitter-html/: Cargo.toml  package.json
resources/language-metavariables/tree-sitter-java/: Cargo.toml  package.json
resources/language-metavariables/tree-sitter-javascript/: Cargo.toml  package.json
resources/language-metavariables/tree-sitter-json/: Cargo.toml  package.json
resources/language-metavariables/tree-sitter-markdown/: Cargo.toml  package.json
resources/language-metavariables/tree-sitter-markdown/tree-sitter-markdown/: Cargo.toml  package.json
resources/language-metavariables/tree-sitter-markdown/tree-sitter-markdown-inline/: Cargo.toml  package.json
resources/language-metavariables/tree-sitter-php/: Cargo.toml  package.json
resources/language-metavariables/tree-sitter-php/php/: Cargo.toml
resources/language-metavariables/tree-sitter-php/php_only/: Cargo.toml
resources/language-metavariables/tree-sitter-python/: Cargo.toml  package.json
resources/language-metavariables/tree-sitter-ruby/: Cargo.toml  package.json
resources/language-metavariables/tree-sitter-rust/: Cargo.toml  package.json
resources/language-metavariables/tree-sitter-solidity/: Cargo.toml  package.json
resources/language-metavariables/tree-sitter-sql/: Cargo.toml  package.json
resources/language-metavariables/tree-sitter-toml/: Cargo.toml  package.json
resources/language-metavariables/tree-sitter-typescript/: Cargo.toml  package.json
resources/language-metavariables/tree-sitter-vue/: Cargo.toml  package.json
resources/language-metavariables/tree-sitter-yaml/: Cargo.toml  package.json
