[package]
name = "marzano-auth"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
license = "MIT"
publish = false

[lints]
rust.unused_crate_dependencies = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
lazy_static = { version = "1.5.0" }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127" }
tokio = { version = "1", features = ["full"] }
log = { version = "0.4.22" }
chrono = { version = "0.4.38" }
marzano-util = { path = "../util" }

[features]
test-utils = []
default = ["test-utils"]
