[package]
name = "grit-util"
description = "Utility functions for GritQL and associated tools"
edition = "2021"
keywords = ["gritql", "grit", "util"]
repository.workspace = true
version.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
license = "MIT"
publish = true

[lints]
rust.unused_crate_dependencies = "warn"

[dependencies]
derive_builder = { version = "0.20.1" }
once_cell = { version = "1.19.0" }
regex = { version = "1.10.6" }
serde = { version = "1.0.209", features = ["derive"] }
napi = { version = "2.16.9", default-features = false, features = [
  "napi8",
  "async",
], optional = true}
napi-derive = { version = "2.16.11", optional = true }
thiserror = { version = "1.0.63" }

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]
