[package]
name = "marzano-language"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
license = "MIT"
publish = false

[lints]
rust.unused_crate_dependencies = "warn"

[dependencies]
tree-sitter = { path = "../../vendor/tree-sitter-facade", package = "tree-sitter-facade-sg" }
tree-sitter-gritql = { path = "../../vendor/tree-sitter-gritql", optional = true }
tree-sitter-css = { path = "../../resources/language-metavariables/tree-sitter-css", optional = true }
tree-sitter-json = { path = "../../resources/language-metavariables/tree-sitter-json", optional = true }
tree-sitter-solidity = { path = "../../resources/language-metavariables/tree-sitter-solidity", optional = true }
tree-sitter-yaml = { path = "../../resources/language-metavariables/tree-sitter-yaml", optional = true }
tree-sitter-hcl = { path = "../../resources/language-metavariables/tree-sitter-hcl", optional = true }
tree-sitter-typescript = { path = "../../resources/language-metavariables/tree-sitter-typescript", optional = true }
tree-sitter-javascript = { path = "../../resources/language-metavariables/tree-sitter-javascript", optional = true }
tree-sitter-html = { path = "../../resources/language-metavariables/tree-sitter-html", optional = true }
tree-sitter-java = { path = "../../resources/language-metavariables/tree-sitter-java", optional = true }
tree-sitter-c-sharp = { path = "../../resources/language-metavariables/tree-sitter-c-sharp", optional = true }
tree-sitter-python = { path = "../../resources/language-metavariables/tree-sitter-python", optional = true }
tree-sitter-md = { path = "../../resources/language-metavariables/tree-sitter-markdown", optional = true }
tree-sitter-go = { path = "../../resources/language-metavariables/tree-sitter-go", optional = true }
tree-sitter-rust = { path = "../../resources/language-metavariables/tree-sitter-rust", optional = true }
tree-sitter-ruby = { path = "../../resources/language-metavariables/tree-sitter-ruby", optional = true }
tree-sitter-sql = { path = "../../resources/language-metavariables/tree-sitter-sql", optional = true }
tree-sitter-vue = { path = "../../resources/language-metavariables/tree-sitter-vue", optional = true }
tree-sitter-toml = { path = "../../resources/language-metavariables/tree-sitter-toml", optional = true }
tree-sitter-php = { path = "../../resources/language-metavariables/tree-sitter-php", optional = true }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127", features = ["preserve_order"] }
marzano-util = { path = "../util" }
grit-util = { path = "../grit-util" }
regex = { version = "1.10.6" }
anyhow = { version = "1.0.86" }
itertools = { version = "0.13.0" }
lazy_static = { version = "1.5.0" }
ignore = { version = "0.4.22", optional = true }
web-sys = { version = "0.3.70", features = ["console"], optional = true }
enum_dispatch = { version = "0.3.13" }
clap = { version = "4.5.16", features = ["derive"] }

[dev-dependencies]
trim-margin = "0.1.0"

[features]
default = ["builtin-parser"]
builtin-parser = [
    "grit-parser",
    "tree-sitter-gritql",
    "tree-sitter-css",
    "tree-sitter-json",
    "tree-sitter-solidity",
    "tree-sitter-yaml",
    "tree-sitter-hcl",
    "tree-sitter-typescript",
    "tree-sitter-javascript",
    "tree-sitter-html",
    "tree-sitter-java",
    "tree-sitter-c-sharp",
    "tree-sitter-python",
    "tree-sitter-md",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-ruby",
    "tree-sitter-sql",
    "tree-sitter-vue",
    "tree-sitter-toml",
    "tree-sitter-php",
]
grit-parser = []
finder = ["ignore"]
