[package]
name = "marzano-lsp"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
license = "MIT"
publish = false

[lints]
rust.unused_crate_dependencies = "warn"

[dependencies]
tower-lsp = { version = "0.20.0" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127" }
marzano-core = { path = "../core", default-features = false, features = [
  "non_wasm",
] }
marzano-gritmodule = { path = "../gritmodule" }
grit_cache = { path = "../gritcache", optional = true }
marzano-language = { path = "../language" }
ai_builtins = { git = "https://github.com/getgrit/ai_builtins.git", optional = true }
grit-util = { path = "../grit-util" }
marzano-util = { path = "../util", features = ["finder"] }
anyhow = { version = "1.0.86" }
dashmap = { version = "6.0.1" }
uuid = { version = "1.10", features = ["v4", "serde"] }
tracing = { version = "0.1.40", default-features = false, features = [] }
tracing-opentelemetry = { version = "0.25.0", optional = true, default-features = false, features = [] }

[dev-dependencies]
tempfile = "3.12.0"
tower = "0.5.0"

[features]
default = []
caching = ["dep:grit_cache"]
ai_builtins = ["dep:ai_builtins"]
project_diagnostics = ["caching"]
grit_alpha = []
# Run these features in testing
test_ci = []
grit_tracing = ["dep:tracing-opentelemetry"]
