[package]
name = "marzano-util"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
license = "MIT"
publish = false

[lints]
rust.unused_crate_dependencies = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = { path = "../../vendor/tree-sitter-facade", package = "tree-sitter-facade-sg" }
grit-util = { path = "../grit-util" }
serde = { version = "1.0.209", features = ["derive"] }
base64 = { version = "0.22.1" }
anyhow = { version = "1.0.86" }
log = { version = "0.4.22", optional = true }
ignore = { version = "0.4.22", optional = true }
sha2 = { version = "0.10.8" }
reqwest = { version = "0.12.7", features = [
  "blocking",
  "json",
], optional = true }
tokio = { version = "1.40.0", optional = true }
serde_json = { version = "1.0.127" }
futures = { version = "0.3.30", optional = true }
http = { version = "1.1.0" }
fs-err = { version = "2.11.0" }


napi = { version = "2.16.9", default-features = false, features = [
  "napi8",
  "async",
], optional = true}
napi-derive = { version = "2.16.11", optional = true }

[dev-dependencies]
insta = { version = "1.39.0", features = ["yaml", "redactions"] }


[features]
finder = ["log", "ignore"]

network_requests_common = []
network_requests = [
  "dep:futures",
  "reqwest",
  "tokio",
  "tokio/rt",
  "network_requests_common",
]
network_requests_external = ["network_requests_common"]

external_functions_ffi = []
napi = ["dep:napi", "dep:napi-derive", "grit-util/napi"]
